Explicitly enable use of native access